@@ -6,6 +6,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+AP-2009-07-28-0: Bugfix:     Removing framework procedures call from init_level
+                             function
+                 Belongs to: AP-2009-07-27-0
+                 Review:     CR
+
 MD-2009-07-28-0: Enhancem.:  added new test for IZ 3088 (jsv)
                  Bugster:    6862580
                  Issue:      3088
@@ -28,7 +33,7 @@ CR-2009-07-27-0: Enhancem.:  Integrate upgrade test (Part II)
                  Belongs to: CR-2009-07-23-0
                  Review:     MD
 
-AP-2009-07-2-0:  Enhancem.:  Added basic tests
+AP-2009-07-27-0: Enhancem.:  Added basic tests
                  Review:     LP
 
 MD-2009-07-23-1: Enhancem.:  added missing dependencies to summary mail
